...
      viewModel.search(input.value)
    }
  }

  ColumnPage(modifier = Modifier.padding(paddingValues)) {
    Spacer(modifier = Modifier.height(20.dp))
    SearchInputArea(modifier = Modifier
      .align(Alignment.CenterHorizontally)
      .padding(horizontal = 10.dp)
      .fillMaxWidth()
      .height(34.dp), keyboardOptions = KeyboardOptions(imeAction = ImeAction.Search), bgColor = BgGray,
      radius = 18.dp, text = input,
      hintWord = stringResource(id = R.string.search), onStopInput = {
...
    SearchRowFilter(state.language, state.sortBy, tabIndex = filterTabIndex, onClick = {
      viewModel.showRowFilterType(it)
    })

    Box {
      state.repositoryList?.let { list ->
        LazyColumn(state = listState, modifier = Modifier.testTag("searchLazyColumn")) {
          items(list) {
            SearchRepositoryItemView(item = it, onClick = {
              navController.navigate("${Router.WEB_BASE_PAGE}/${Uri.encode(it.htmlUrl)}")
            }, showIssues = state.showIssues, onClickIssues = {
              navController.navigate("${Router.EDIT_ISSUES_BASE_PAGE}/${it.owner.login}/${it.name}")
            })
...
