package com.example.common.data.constants


/**
 * FIXME
 *
 * @author lincanye (silverever07@gmail.com)
 * @Datetime 2024-08-23 15:04
 */
object UrlConstants {
  const val GITHUB_URL = "https://www.github.com"
  const val EXPLORE_URL = "https://github.com/explore"
}